# fetchr

./: .gitignore  README.md  hosts_config.yaml  pyproject.toml  verify_factory.py
docs/: exload.md
fetchr/: __init__.py  aria2_daemon.py  aria2c.py  concurrency_manager.py  config.py  config_loader.py  debrid.py  health.py  host_resolver.py  main.py  main2.py  parallel.py  resolver.py  types.py  utils.py
fetchr/captcha/: __init__.py  css_position.py
fetchr/database/: models.py  session.py
fetchr/hosts/: __init__.py  anonfile.py  axfc.py  common.py  desiupload.py  exload.py  filedot.py  filemirage.py  gofile.py  krakenfiles.py  onefichier.py  passtrought.py  pixeldrain.py  ranoz.py  sendnow.py  uploadee.py  uploadflix.py  uploadhive.py  usersdrive.py
fetchr/manager/: download_manager.py
fetchr/network/: __init__.py  proxy.py  tor.py
tests/: __init__.py  conftest.py  test_api_integration.py  test_downloader.py  test_grabber.py  test_health.py  test_new_structure.py  test_types.py
